# baltimore

./: .gitignore  LICENSE.md  README.md  baltimore.thrift  client.py  pyproject.toml  requirements.txt  server.py
gen-py/baltimore/: Baltimore-remote  Baltimore.py  __init__.py
