[tool.poetry]
name = "baltimore"
version = "0.1.0"
description = ""
authors = ["Nick Jackson <nick@dxw.com>"]

[tool.poetry.dependencies]
python = "^3.8"
thrift = "^0.15.0"
PyYAML = "^6.0"
gpiozero = "^1.6.2"
tk = "^0.1.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
